# OV10

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .sqlfluff  .yamllint  PSScriptAnalyzerSettings.psd1  consolidar_posicao.py  eslint.config.mjs  exportador.py  leitor_planilha.py  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  utils.py
.codex/: AGENTS.md  AGENT_ACTIVITY_LOG.jsonl  ARCHITECTURE_GUARDRAILS.md  ARCHITECTURE_MAP.md  BACKLOG.md  CONTEXT.md  DECISIONS.md  EXECUTION_LEDGER.md  EXECUTION_LOOP.md  INTEGRATION_REPORT.md  OPERATING_MODEL.md  PROJECT_MEMORY_INDEX.md  QUALITY_GATES.md  REPOSITORY_KNOWLEDGE_GRAPH.md  SYSTEM_STATE.yaml  TASK_GRAPH.md  UAT_FEEDBACK_TEMPLATE.md
apps_script_debug_bridge/: .clasp.json  DebugBridge.gs  README.md  appsscript.json
config/: ov10_portfolio.toml
data/: OV10_base_2025.xlsx  OV10_output_20250707.xlsx
ov10_codex_handoff/: 00_README_USO.md  01_VIS+âO_GERAL_E_PREMISSAS.md  02_ARQUITETURA_ALVO_OV10.md  03_MODELO_DE_DADOS_E_M+ôDULOS.md  04_PLANO_DE_REFER+èNCIA_PLANILHA_APPS_SCRIPT.md  05_BACKLOG_PRIORIZADO.md  06_MULTIAGENTE_ORQUESTRA+ç+âO.md  07_PROMPT_MASTER_CODEX.md  08_NOTAS_SOBRE_FONTES_E_EVENTOS.md  09_STACK_DECISION_OV10.md  10_ACESSOS_GOOGLE_APPS_SCRIPT_E_APP_WEB.md  10_GOVERNANCA_E_QUALIDADE.md  11_GOVERNANCA_E_QUALIDADE.md  Cópia de v6.4_Controle de Investimentos (Alpha).xlsx
sql/: schema.sql
tests/: test_cash_ledger.py  test_cli_entrypoint.py  test_fiscal_contract_report.py  test_instrument_reference.py  test_market_data.py  test_market_valuation.py  (+9 more)
(+171 files in other folders)
